--- a/frontend/src/components/CheckerBoard.css
+++ b/frontend/src/components/CheckerBoard.css
@@ -38,7 +38,7 @@
     padding: 0;
     margin: 0;
     z-index: 10;    
-    background-color: black;
+    background-color: transparent;
     background: url('../graphics/move_tile.png')  no-repeat center center; 
     background-size: cover;
     image-rendering: pixelated;
