--- a/frontend/src/components/GameRoom.css
+++ b/frontend/src/components/GameRoom.css
@@ -8,4 +8,13 @@
 .welcome{
     font-size: 3vw;
 }
+.top_elm {
+ background-color: rgb(0, 51, 204); 
+ color: white;  
+}
 
+.quote{
+    margin-top: 30%;
+    margin-bottom: 20%;
+
+}
